:tada: Finalização do projeto

--- a/aluno-service/src/main/resources/application.properties
+++ b/aluno-service/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=aluno-service
 server.port=8081
 
 # URL de conexão com o banco
-spring.datasource.url=jdbc:postgresql://localhost:5432/meubanco
+spring.datasource.url=jdbc:postgresql://localhost:5432/nome-do-banco
 
 # Credenciais
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.username=usuario-do-postgres
+spring.datasource.password=senha-do-postgres
 
 # Driver JDBC do PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,6 +14,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Criação automática de tabelas
 spring.jpa.hibernate.ddl-auto=update
 
-#Chaves
+#Chaves: importar as chaves como '.pem' na pasta resources
 jwt.public.key=classpath:public.pem
 jwt.private.key=classpath:private.pem
