--- a/exercicio-service/pom.xml
+++ b/exercicio-service/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.auth-service</groupId>
-	<artifactId>auth-service</artifactId>
+	<groupId>com.exercicio-service</groupId>
+	<artifactId>Exercicio-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>auth-service</name>
+	<name>Exercicio-service</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -68,7 +68,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-			<version>3.2.0</version>
 		</dependency>
 
 		<dependency>
