--- a/exercicio-service/src/main/resources/application.properties
+++ b/exercicio-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=auth-service
-server.port=8080
+spring.application.name=Exercicio-service
+server.port=8082
 
 # URL de conexão com o banco
 spring.datasource.url=jdbc:postgresql://localhost:5432/nome-do-banco
